# android-bazel-example-circleci

./: .gitignore  MODULE.bazel
.circleci/: config.yml
src/androidTest/: BUILD
src/androidTest/java/com/example/bazel/: ExampleInstrumentedTest.java  ExampleInstrumentedTestWithAndroidX.java
src/main/: AndroidManifest.xml  BUILD
src/main/java/com/example/bazel/: AndroidManifest.xml  BUILD  MainActivity.java
src/main/java/com/example/bazel/lib/: BUILD  Greeter.java
src/main/java/com/example/bazel/res/values/: strings.xml
src/test/: BUILD
src/test/java/com/example/bazel/: ExampleUnitTest.java  ExampleUnitTest.kt
